--- a/POCUSIVaccess.html
+++ b/POCUSIVaccess.html
@@ -60,8 +60,8 @@
             <div class="input-group">
                 <h3>Technique and confirmation</h3>
                 <button data-section="Technique and confirmation" onclick="handleButtonClick(this, 'the IV was established under sterile conditions with the site prepped and the ultrasound probe sterilized prior to use')">sterile</button>
-                <button data-section="Technique and confirmation" onclick="handleButtonClick(this, 'while scanning in the transverse plane, a compressible vein was identified and the needle was visualized in the vein and advanced through the lumen of the vein. There was good blood return and the IV was established successfully.')">transverse</button>
-                <button data-section="Technique and confirmation" onclick="handleButtonClick(this, 'while scanning in the longitudinal plane, a compressible vein was identified and the needle was visualized in the vein and advanced through the lumen of the vein. There was good blood return and the IV was established successfully.')">longitudinal</button>
+                <button data-section="Technique and confirmation" onclick="handleButtonClick(this, 'while scanning in the transverse plane, a compressible vein was identified and the needle was visualized in the vein and advanced through the lumen of the vein. There was good blood return.')">transverse</button>
+                <button data-section="Technique and confirmation" onclick="handleButtonClick(this, 'while scanning in the longitudinal plane, a compressible vein was identified and the needle was visualized in the vein and advanced through the lumen of the vein. There was good blood return.')">longitudinal</button>
                 <textarea id="TechniqueText" placeholder="" onchange="updateRealTimeText('Technique and confirmation', 'TechniqueText')"></textarea>
             </div>
 
