--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="clinicalpathways.html">Clinical Pathways</a></li> <!-- New Link -->
+            <li><a href="clinicalpathways.html">Clinical Pathways</a></li>
         </ul>
     </nav>
 
@@ -63,6 +63,7 @@
                 <li><a href="POCUSCardiac.html">Cardiac</a></li>
                 <li><a href="POCUSFast.html">E-FAST</a></li>
                 <li><a href="POCUSIVaccess.html">IV access</a></li>
+                <li><a href="POCUSLung.html">Lung</a></li>
             </ul>
         </section>
 
