--- a/Criticalcare.html
+++ b/Criticalcare.html
@@ -15,6 +15,7 @@
     <nav>
         <ul>
             <li><a href="index.html#home">Home</a></li>
+            <li><a href="clinicalpathways.html">Clinical Pathways</a></li>
         </ul>
     </nav>
 
