--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Criticalcare.html">Critical Care</a></li>
                 <li><a href="EKG.html">EKG Interpretation</a></li>
+                <li><a href="reduction.html">Fracture Reduction</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
