--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -123,9 +123,9 @@
             <button onclick="copyToClipboard()">Copy to Clipboard</button>
             <button onclick="clearOutput()">Clear</button>
             
-            <!-- New Section for Related Procedures -->
+            <!--Related Procedures -->
             <div class="related-procedures">
-                <p>Press the following links to generate notes for commonly associated procedures: 
+                <p>Please note that at least 15 minutes of total service time is required to code for procedural sedation. Press the following links to generate notes for commonly associated procedures: 
                     <a href="reduction.html">fracture reduction</a>
                 </p>
             </div>
