--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
-                <li><a href="Proceduralsedation.html">Procedural Sedation</a></li>
+                <li><a href="Proceduralsedation.html">Sedation</a></li>
             </ul>
         </section>
         
