--- a/reduction.html
+++ b/reduction.html
@@ -144,6 +144,13 @@
             <div id="outputArea"></div>
             <button onclick="copyToClipboard()">Copy to Clipboard</button>
             <button onclick="clearOutput()">Clear</button>
+
+            <!-- New Section for Related Procedures -->
+            <div class="related-procedures">
+                <p>Press the following link to document procedural sedation, if utilized: 
+                    <a href="Proceduralsedation.html">procedural sedation</a>
+                </p>
+            </div>
         </div>
     </div>
 
