--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -125,7 +125,7 @@
             
             <!--Related Procedures -->
             <div class="related-procedures">
-                <p>Please note that at least 15 minutes of total service time is required to code for procedural sedation. Press the following links to generate notes for commonly associated procedures: 
+                <p><strong>Please note that at least 15 minutes of total service time is required to code for procedural sedation.</strong> Press the following links to generate notes for commonly associated procedures: 
                     <a href="reduction.html">fracture reduction</a>
                 </p>
             </div>
