--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -79,7 +79,7 @@
                 <button data-section="Medication" onclick="handleButtonClick(this, 'fentanyl')">fentanyl</button>
                 <button data-section="Medication" onclick="handleButtonClick(this, 'medications were administered by myself')">provider admin</button>
                 <button data-section="Medication" onclick="handleButtonClick(this, 'medications were administered by the RN at bedside')">RN admin</button>
-                <textarea id="MedicationText" placeholder="Document the amount of sedative used here" onchange="updateRealTimeText('Medication', 'MedicationText')"></textarea>
+                <textarea id="MedicationText" placeholder="Document the total dosage of sedative used here" onchange="updateRealTimeText('Medication', 'MedicationText')"></textarea>
             </div>
 
             <!-- Complications Section -->
