--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <h2>Procedures</h2>
             <ul>
                 <li><a href="Abscess.html">Abscess I/D</a></li>
+                <li><a href="Cardioversion.html">Cardioversion</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Criticalcare.html">Critical Care</a></li>
                 <li><a href="EKG.html">EKG Interpretation</a></li>
