--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -126,7 +126,8 @@
             <!--Related Procedures -->
             <div class="related-procedures">
                 <p><strong>Please note that at least 15 minutes of total service time is required to code for procedural sedation.</strong> Press the following links to generate notes for commonly associated procedures: 
-                    <a href="reduction.html">fracture reduction</a>
+                    <a href="reduction.html">Fracture Reduction</a>
+                    <a href="Cardioversion.html">Cardioversion</a>
                 </p>
             </div>
         </div>
