--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <li><a href="POCUSFast.html">E-FAST</a></li>
                 <li><a href="POCUSIVaccess.html">IV access</a></li>
                 <li><a href="POCUSLung.html">Lung</a></li>
+                <li><a href="POCUSSoft_tissue.html">Soft tissue</a></li>
             </ul>
         </section>
 
