--- a/radiologyread.html
+++ b/radiologyread.html
@@ -67,8 +67,10 @@
                 <br><i>Chest</i>
                 <button data-section="Interpretation" onclick="handleButtonClick(this, 'no pneumonia identified')">neg PNA</button>
                 <button data-section="Interpretation" onclick="handleButtonClick(this, 'no pneumothorax noted')">neg PTX</button>
-                <button data-section="Interpretation" onclick="handleButtonClick(this, 'no significant PE noted')">neg PE</button>
                 <button data-section="Interpretation" onclick="handleButtonClick(this, 'normal mediastinum')">normal mediastinum</button>
+                <button data-section="Interpretation" onclick="handleButtonClick(this, 'no signs of pulmonary edema')">neg pulm edema</button>
+                <button data-section="Interpretation" onclick="handleButtonClick(this, 'no significant PE noted')">neg PE</button>
+                
                 
                 <!-- Abdomen Findings -->
                 <br><i>Abdomen</i>
