--- a/NIHSS.html
+++ b/NIHSS.html
@@ -28,7 +28,7 @@
             <div class="input-group">
                 <h3>Time</h3>
                 <button onclick="handleTimeButtonClick(this)">Now</button>
-                <textarea id="timeText" placeholder="Manual time entry (optional)"></textarea>
+                <textarea id="timeText" placeholder="Manual time entry (optional)" onchange="updateRealTimeText('Time')"></textarea>
             </div>
 
             <!-- Level of Consciousness Section -->
