--- a/radiologyread.html
+++ b/radiologyread.html
@@ -26,8 +26,8 @@
             <div class="input-group">
                 <h3>Imaging type</h3>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'X-ray')">XR</button>
-                <button data-section="Imaging type" onclick="handleButtonClick(this, 'CT scan without contrast')">CT non-con</button>
-                <button data-section="Imaging type" onclick="handleButtonClick(this, 'CT scan with contrast')">CT scan w/ con</button>
+                <button data-section="Imaging type" onclick="handleButtonClick(this, 'CT scan without contrast')">CT w/o</button>
+                <button data-section="Imaging type" onclick="handleButtonClick(this, 'CT scan with contrast')">CT scan w/</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'MRI')">MRI</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'ultrasound')">US</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'head')">head</button>
