--- a/radiologyread.html
+++ b/radiologyread.html
@@ -27,7 +27,7 @@
                 <h3>Imaging type</h3>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'X-ray')">XR</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'CT scan without contrast')">CT w/o</button>
-                <button data-section="Imaging type" onclick="handleButtonClick(this, 'CT scan with contrast')">CT scan w/</button>
+                <button data-section="Imaging type" onclick="handleButtonClick(this, 'CT scan with contrast')">CT w/</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'MRI')">MRI</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'ultrasound')">US</button>
                 <button data-section="Imaging type" onclick="handleButtonClick(this, 'head')">head</button>
