--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <h2>Point-of-Care Ultrasound</h2>
             <ul>
                 <li><a href="POCUSCardiac.html">Cardiac</a></li>
+                <li><a href="POCUSDVT.html">DVT</a></li>
                 <li><a href="POCUSFast.html">E-FAST</a></li>
                 <li><a href="POCUSIVaccess.html">IV access</a></li>
                 <li><a href="POCUSLung.html">Lung</a></li>
