--- a/Criticalcare.html
+++ b/Criticalcare.html
@@ -35,7 +35,7 @@
                 <button data-section="totalTime" onclick="handleButtonClick(this, '65 minutes')">65</button>
                 <button data-section="totalTime" onclick="handleButtonClick(this, '70 minutes')">70</button>
                 <button data-section="totalTime" onclick="handleButtonClick(this, '75 minutes')">75</button>
-                <textarea id="totalTimeText" placeholder="Add any additional comments" onchange="updateRealTimeText('Total Time', 'totalTimeText')"></textarea>
+                <textarea id="totalTimeText" placeholder="" onchange="updateRealTimeText('Total Time', 'totalTimeText')"></textarea>
             </div>
 
             <!-- Indications -->
@@ -46,9 +46,10 @@
                 <button data-section="indications" onclick="handleButtonClick(this, 'management of an acute neurologic event requiring discussion with consultants, medical management and frequent reassessments')">Neurologic</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'trauma evaluation including careful examination, ordering and interpretation of traumatic imaging, and frequent reassessments')">Trauma</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'management of acute respiratory distress requiring aggressive medical management and frequent reassessments')">Respiratory Distress</button>
+                <button data-section="indications" onclick="handleButtonClick(this, 'medical management of pathologic heart rate and/or rhythm including frequent treatment response reassessments')">Rate/rhythm Control</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'medical management of anaphylaxis requiring frequent reassessments')">Anaphylaxis</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'acute anemia requiring blood transfusion and frequent reassessments')">Anemia/Blood Transfusion</button>
-                <textarea id="indicationsText" placeholder="Add any additional comments" onchange="updateRealTimeText('Indications', 'indicationsText')"></textarea>
+                <textarea id="indicationsText" placeholder="" onchange="updateRealTimeText('Indications', 'indicationsText')"></textarea>
             </div>
 
             <!-- Specific Interventions -->
@@ -60,7 +61,7 @@
                 <button data-section="specificInterventions" onclick="handleButtonClick(this, 'documentation of patient’s medical care')">Documentation</button>
                 <button data-section="specificInterventions" onclick="handleButtonClick(this, 'discussion of patient’s current diagnosis, medical management, and prognosis with family')">Family Discussion</button>
                 <button data-section="specificInterventions" onclick="handleButtonClick(this, 'discussion with respiratory therapy regarding patient’s care and reassessment status')">Respiratory Therapy</button>
-                <textarea id="specificInterventionsText" placeholder="Add any additional comments" onchange="updateRealTimeText('Specific Interventions', 'specificInterventionsText')"></textarea>
+                <textarea id="specificInterventionsText" placeholder="Add any specific interventions" onchange="updateRealTimeText('Specific Interventions', 'specificInterventionsText')"></textarea>
             </div>
         </div>
 
