--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -123,12 +123,12 @@
             <button onclick="copyToClipboard()">Copy to Clipboard</button>
             <button onclick="clearOutput()">Clear</button>
             
-            <!--Related Procedures -->
-            <div class="related-procedures">
-                <p><strong>Please note that at least 15 minutes of total service time is required to code for procedural sedation.</strong> Press the following links to generate notes for commonly associated procedures: 
+            <div class="reminder-link">
+                <p>Press the following links to generate notes for commonly associated procedures: 
                     <a href="reduction.html">Fracture Reduction</a>
-                    <a href="Cardioversion.html">Cardioversion</a>
-                </p>
+                    <a href="Cardioversion.html">Cardioversion</a></p>
+                <p>For reminders on procedural sedation billing, please press this link: 
+                <a href="procedure_pics/procedural_sedation.jpg" target="_blank">Procedural Sedation Billing Tips</a></p>
             </div>
         </div>
     </div>
