--- a/Criticalcare.html
+++ b/Criticalcare.html
@@ -70,7 +70,15 @@
             <div id="outputArea"></div>
             <button onclick="copyToClipboard()">Copy to Clipboard</button>
             <button onclick="clearOutput()">Clear</button>
+            
+            <div class="reminder-link">
+                <p>For reminders on critical care billing, please press this link: 
+                <a href="procedure_pics/critical_care.jpg" target="_blank">Critical Care Billing Tips</a></p>
+            </div>
         </div>
+        
+
+
     </div>
 
     <footer>
