--- a/Criticalcare.html
+++ b/Criticalcare.html
@@ -73,7 +73,7 @@
             
             <div class="reminder-link">
                 <p>For reminders on critical care billing, please press this link: 
-                <a href="procedure_pics/critical_care.jpg" target="_blank">Critical Care Billing Tips</a></p>
+                <a href="critical_care.jpg" target="_blank">Critical Care Billing Tips</a></p>
             </div>
         </div>
         
