--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -128,7 +128,7 @@
                     <a href="reduction.html">Fracture Reduction</a>
                     <a href="Cardioversion.html">Cardioversion</a></p>
                 <p>For reminders on procedural sedation billing, please press this link: 
-                <a href="procedure_pics/procedural_sedation.jpg" target="_blank">Procedural Sedation Billing Tips</a></p>
+                <a href="procedural_sedation.jpg" target="_blank">Procedural Sedation Billing Tips</a></p>
             </div>
         </div>
     </div>
