--- a/reduction.html
+++ b/reduction.html
@@ -72,6 +72,7 @@
             <div class="input-group">
                 <h3>Pre-test Exam</h3>
                 <button data-section="Pre-test Exam" onclick="handleButtonClick(this, 'the affected extremity was neurovascularly intact prior to splinting')">n/v intact</button>
+                <button data-section="Pre-test Exam" onclick="handleButtonClick(this, 'absent pulses concerning for vascular compromise')">absent pulses</button>
                 <button data-section="Pre-test Exam" onclick="handleButtonClick(this, 'there was diminished capillary refill concerning for vascular compromise')">diminished CR</button>
                 <button data-section="Pre-test Exam" onclick="handleButtonClick(this, 'there was neurologic deficit')">neurologic deficit</button>
                 <textarea id="PreTestExamText" placeholder="" onchange="updateRealTimeText('Pre-test Exam', 'PreTestExamText')"></textarea>
