--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li><a href="Cardioversion.html">Cardioversion</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Criticalcare.html">Critical Care</a></li>
+                <li><a href="definitivefracture.html">Definitive Fracture Management</a></li>
                 <li><a href="EKG.html">EKG Interpretation</a></li>
                 <li><a href="reduction.html">Fracture Reduction</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
