--- a/POCUSLung.html
+++ b/POCUSLung.html
@@ -27,7 +27,7 @@
             <div class="input-group">
                 <h3>Time</h3>
                 <button data-section="Time" onclick="handleTimeButtonClick(this)">Now</button>
-                <textarea id="TimeText" placeholder="Manual time entry (optional)" onchange="updateRealTimeText('Time', 'TimeText')"></textarea>
+                <textarea id="TimeText" placeholder="" onchange="updateRealTimeText('Time', 'TimeText')"></textarea>
             </div>
 
             <!-- Indication Section -->
@@ -37,8 +37,8 @@
                 <button data-section="Indication" onclick="handleButtonClick(this, 'respiratory distress')">respiratory distress</button>
                 <button data-section="Indication" onclick="handleButtonClick(this, 'trauma')">trauma</button>
                 <button data-section="Indication" onclick="handleButtonClick(this, 'POCUS confirmed to better clarify findings from an abnormal XRay')">abnormal XR</button>
-                <textarea id="IndicationText" placeholder="Additional indication details" onchange="updateRealTimeText('Indication', 'IndicationText')"></textarea>
-            </div>
+                <textarea id="IndicationText" placeholder="" onchange="updateRealTimeText('Indication', 'IndicationText')"></textarea>
+            </div>u
 
             <!-- Views Section -->
             <div class="input-group">
@@ -49,7 +49,7 @@
                 <button data-section="Views" onclick="handleButtonClick(this, 'left anterior')">left ant</button>
                 <button data-section="Views" onclick="handleButtonClick(this, 'left lateral')">left lat</button>
                 <button data-section="Views" onclick="handleButtonClick(this, 'left posterior')">left post</button>
-                <textarea id="ViewsText" placeholder="Additional view details" onchange="updateRealTimeText('Views', 'ViewsText')"></textarea>
+                <textarea id="ViewsText" placeholder="" onchange="updateRealTimeText('Views', 'ViewsText')"></textarea>
             </div>
 
             <!-- Findings Section -->
@@ -64,7 +64,7 @@
                 <button data-section="Findings" onclick="handleButtonClick(this, 'no lung sliding was visualized in the left lung')">left PTX</button>
                 <button data-section="Findings" onclick="handleButtonClick(this, 'a fluid collection consistent with an effusion was visualized in the right lung')">right effusion</button>
                 <button data-section="Findings" onclick="handleButtonClick(this, 'a fluid collection consistent with an effusion was visualized in the left lung')">left effusion</button>
-                <textarea id="FindingsText" placeholder="Additional findings details" onchange="updateRealTimeText('Findings', 'FindingsText')"></textarea>
+                <textarea id="FindingsText" placeholder="" onchange="updateRealTimeText('Findings', 'FindingsText')"></textarea>
             </div>
 
             <!-- Interpretation Section -->
@@ -75,7 +75,7 @@
                 <button data-section="Interpretation" onclick="handleButtonClick(this, 'the ultrasound findings of B-lines and hepatization are suggestive of pneumonia')">PNA</button>
                 <button data-section="Interpretation" onclick="handleButtonClick(this, 'the lack of lung sliding is concerning for a pneumothorax in this patient')">PTX</button>
                 <button data-section="Interpretation" onclick="handleButtonClick(this, 'a pleural effusion was visualized on this exam')">pleural effusion</button>
-                <textarea id="InterpretationText" placeholder="Provide an interpretation here." onchange="updateRealTimeText('Interpretation', 'InterpretationText')"></textarea>
+                <textarea id="InterpretationText" placeholder="" onchange="updateRealTimeText('Interpretation', 'InterpretationText')"></textarea>
             </div>
         </div>
 
