--- a/Splinting.html
+++ b/Splinting.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="BlueWater Health Logo" id="header-logo">
+        <h1>Clinical Hub</h1>
     </header>
 
     <nav>
         <ul>
             <li><a href="index.html#home">Home</a></li>
-            <li><a href="clinicalpathways.html">Clinical Pathways</a></li>
         </ul>
     </nav>
 
