--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlueWater Health Clinical Hub</title>
+    <title>Clinical Hub Home</title>
     <link rel="stylesheet" href="indexstyle.css">
 </head>
 
