--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
 
     <nav>
         <ul>
-            <li><a href="index.html#home">Home</a></li>
+            <li><a href="index.html#home"></a></li>
         </ul>
     </nav>
 
     <main>
         <section id="home">
-            <h2>Home</h2>
-            <p>Welcome to the Clinical Hub- your source for clinical decision-making and documentation tools.</p>
         </section>
 
         <!-- Clinical Decision Tools Section -->
