--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="Cardioversion.html">Cardioversion</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Criticalcare.html">Critical Care</a></li>
-                <li><a href="definitivefracture.html">Definitive Fracture Management</a></li>
+                <li><a href="definitivefracture.html">Def Fx Care</a></li>
                 <li><a href="Dislocation.html">Dislocation</a></li>
                 <li><a href="EKG.html">EKG Interpretation</a></li>
                 <li><a href="reduction.html">Fracture Reduction</a></li>
