--- a/Abscess.html
+++ b/Abscess.html
@@ -62,6 +62,7 @@
                 <button data-section="technique" onclick="handleButtonClick(this, 'the abscess pocket was irrigated with sterile saline')">irrigation</button>
                 <button data-section="technique" onclick="handleButtonClick(this, 'packing was placed into the abscess cavity')">packing</button>
                 <button data-section="technique" onclick="handleButtonClick(this, 'a loop drain was placed')">loop drain</button>
+                <button data-section="technique" onclick="handleButtonClick(this, 'wound cultures were sent to the lab for ')">cultures</button>
                 <textarea id="techniqueText" placeholder="" onchange="updateRealTimeText('Technique', 'techniqueText')"></textarea>
 
                 <h3>Result</h3>
