--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <nav>
         <ul>
-            <li><a href="index.html#home"></a></li>
+            <li><i> Documentation and clinical-decision tools for emergency medicine.</i></li>
+            
         </ul>
     </nav>
 
@@ -79,8 +80,7 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 BlueWater Health. All rights reserved.</p>
+   <footer>
     </footer>
 </body>
 
