--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h2>Clinical Decision Tools</h2>
             <ul>
                 <li><a href="Canadianhead.html">Canadian Head CT</a></li>
+                <li><a href="CHA2DS2VASC.html">CHA2DS2-VASC</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
                 <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
