--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <header>
-        <h1>Clinical Hub</h1>
+        <span class="white-text">Clinical</span> 
+        <span class="blue-text">Hub</span>
     </header>
 
     <main>
@@ -57,7 +58,7 @@
         
         <!-- POCUS Section -->
         <section id="pocus">
-            <h2>Ultrasound</h2>
+            <h2>Point-of-Care Ultrasound</h2>
             <ul>
                 <li><a href="POCUSCardiac.html">Cardiac</a></li>
                 <li><a href="POCUSDVT.html">DVT</a></li>
