--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="ABCD2.html">ABCD2 for TIA</a></li>
                 <li><a href="Canadianhead.html">Canadian Head CT</a></li>
                 <li><a href="CHA2DS2VASC.html">CHA2DS2-VASC</a></li>
+                <li><a href="GRACE.html">GRACE Score</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
                 <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
