--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <!-- POCUS Section -->
         <section id="pocus">
-            <h2>Point-of-Care Ultrasound</h2>
+            <h2>Ultrasound</h2>
             <ul>
                 <li><a href="POCUSCardiac.html">Cardiac</a></li>
                 <li><a href="POCUSDVT.html">DVT</a></li>
