--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="decision-tools">
             <h2>Clinical Decision Tools</h2>
             <ul>
-                <li><a href="ABCD2.html">ABCD2 for TIA</a></li>
+                <li><a href="ABCD2.html">ABCD2</a></li>
                 <li><a href="Canadianhead.html">Canadian Head CT</a></li>
                 <li><a href="CHA2DS2VASC.html">CHA2DS2-VASC</a></li>
                 <li><a href="GRACE.html">GRACE Score</a></li>
