--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a href="definitivefracture.html">Def Fx Care</a></li>
                 <li><a href="Dislocation.html">Dislocation</a></li>
                 <li><a href="EKG.html">EKG Interpretation</a></li>
+                <li><a href="Epistaxis.html">Epistaxis</a></li>
                 <li><a href="reduction.html">Fracture Reduction</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
