--- a/Epistaxis.html
+++ b/Epistaxis.html
@@ -74,7 +74,7 @@
             <!-- Provider Section -->
             <div class="input-group">
                 <h3>Provider</h3>
-                <textarea id="ProviderText" placeholder="Enter provider details" onchange="updateRealTimeText('Provider', 'ProviderText')"></textarea>
+                <textarea id="ProviderText" placeholder="" onchange="updateRealTimeText('Provider', 'ProviderText')"></textarea>
             </div>
         </div>
 
