--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
+                <li><a href="MDM.html">MDM Section</a></li>
                 <li><a href="radiologyread.html">Radiology Read</a></li>
                 <li><a href="Proceduralsedation.html">Sedation</a></li>
                 <li><a href="Splinting.html">Splinting</a></li>              
