--- a/Intubation.html
+++ b/Intubation.html
@@ -90,6 +90,9 @@
             <button onclick="triggerMacro(['timeout-emergent', 'indication-resp failure', 'consent-emergent', 'preparation-position/monitor', 'preparation-equipment', 'medications-etomidate', 'medications-succinylcholine', 'technique-glidescope', 'technique-7.5 Fr ETT', 'confirmation-ETCO2 waveform', 'confirmation-chest Xray', 'confirmation-direct visualization', 'confirmation-breath sounds', 'complications-none, first pass'], this)">Glidescope 7.5</button>
             <!-- Add more macros as needed -->
         </div>
+
+        <p><strong>Note:</strong> BlueWater strongly encourages the use of waveform capnography to confirm tube placement.</p>
+        </div>
     </div>
 </div>
 
