--- a/Intubation.html
+++ b/Intubation.html
@@ -91,7 +91,7 @@
             <!-- Add more macros as needed -->
         </div>
 
-        <p><strong>Note:</strong> BlueWater strongly encourages the use of waveform capnography to confirm tube placement.</p>
+        <p>Note: BlueWater strongly encourages the use of waveform capnography to confirm tube placement.</p>
         </div>
     </div>
 </div>
