--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li><a href="MDM.html">MDM Section</a></li>
                 <li><a href="radiologyread.html">Radiology Read</a></li>
                 <li><a href="Proceduralsedation.html">Sedation</a></li>
+                <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
                 <li><a href="Splinting.html">Splinting</a></li>              
             </ul>
         </section>
