--- a/Intubation.html
+++ b/Intubation.html
@@ -62,7 +62,7 @@
             <textarea id="techniqueText" placeholder="" onchange="updateRealTimeText('Technique', 'techniqueText')"></textarea>
             
             <h3>Confirmation of Tube</h3>
-            <button data-section="confirmation" onclick="handleButtonClick(this, 'appropriate end-tidal waveform capnography was noted')" style="background-color: #FF6868; color: white; border: 2px solid #000080;">ETCO2 waveform</button>
+            <button data-section="confirmation" onclick="handleButtonClick(this, 'end-tidal waveform capnography was confirmed')" style="background-color: #1AC4D0; color: white; border: 2px solid #000080;">ETCO2 waveform</button>
             <button data-section="confirmation" onclick="handleButtonClick(this, 'tube was directly visualized passing through the cords')">direct visualization</button>
             <button data-section="confirmation" onclick="handleButtonClick(this, 'symmetric breath sounds were auscultated')">breath sounds</button>
             <button data-section="confirmation" onclick="handleButtonClick(this, 'a chest XRay was ordered and interpreted showing correct ETT placement')">chest Xray</button>
@@ -87,11 +87,8 @@
         <!-- Macro Buttons Section -->
         <div class="macro-section">
             <h3>Macros</h3>
-            <button onclick="triggerMacro(['timeout-emergent', 'indication-resp failure', 'consent-emergent', 'preparation-position/monitor', 'preparation-equipment', 'medications-etomidate', 'medications-succinylcholine', 'technique-glidescope', 'technique-7.5 Fr ETT', 'confirmation-ETCO2 waveform', 'confirmation-chest Xray', 'confirmation-direct visualization', 'confirmation-breath sounds', 'complications-none, first pass'], this)">Glidescope 7.5</button>
+            <button onclick="triggerMacro(['timeout-emergent', 'indication-resp failure', 'consent-emergent', 'preparation-position/monitor', 'preparation-equipment', 'medications-etomidate', 'medications-succinylcholine', 'technique-glidescope', 'technique-7.5 Fr ETT', 'confirmation-ETCO2', 'confirmation-chest Xray', 'confirmation-direct visualization', 'confirmation-breath sounds', 'complications-none, first pass'], this)">Glidescope 7.5</button>
             <!-- Add more macros as needed -->
-        </div>
-
-        <p>Note: BlueWater strongly encourages the use of waveform capnography to confirm tube placement.</p>
         </div>
     </div>
 </div>
