--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <li><a href="radiologyread.html">Radiology Read</a></li>
                 <li><a href="Proceduralsedation.html">Sedation</a></li>
                 <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
-                <li><a href="Splinting.html">Splinting</a></li>              
+                <li><a href="Splinting.html">Splinting</a></li>
+                <li><a href="Triggerpoint.html">Trigger Point</a></li>       
             </ul>
         </section>
         
@@ -71,6 +72,7 @@
                 <li><a href="POCUSFast.html">E-FAST</a></li>
                 <li><a href="POCUSIVaccess.html">IV access</a></li>
                 <li><a href="POCUSLung.html">Lung</a></li>
+                <li><a href="POCUSObstetric.html">Obstetric</a></li>
                 <li><a href="POCUSSoft_tissue.html">Soft tissue</a></li>
             </ul>
         </section>
