--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
                 <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
                 <li><a href="Parkland.html">Parkland Formula</a></li>
-                <li><a href="PERCscore.html">PERC Score</a></li>
                 <li><a href="PECARNhead.html">PECARN Head</a></li>
-                <li><a href="Wellsscore.html">Wells' Score for PE</a></li>
+                <li><a href="PERCscore.html">PERC Score</a></li>
+                <li><a href="PESIscore.html">PESI Score</a></li>
+                <li><a href="Wellsscore.html">Wells' Score (PE)</a></li>
             </ul>
         </section>
 
