--- a/POCUSSoft_tissue.html
+++ b/POCUSSoft_tissue.html
@@ -33,6 +33,12 @@
                 <button data-section="Indication" onclick="handleButtonClick(this, 'visualization of foreign body')">foreign body</button>
                 <textarea id="IndicationText" placeholder="" onchange="updateRealTimeText('Indication', 'IndicationText')"></textarea>
             </div>
+            
+            <!-- Location Section -->
+            <div class="input-group">
+                <h3>Location</h3>
+                <textarea id="LocationText" placeholder="" onchange="updateRealTimeText('Location', 'LocationText')"></textarea>
+            </div>
 
             <!-- Findings Section -->
             <div class="input-group">
