--- a/MDM.html
+++ b/MDM.html
@@ -22,26 +22,26 @@
             <strong><i style="font-size: 1.2em">Complexity/Problems Addressed</i></strong><br>
             <i style="font-size: 0.85em;">Low Complexity</i>
             <div class="input-group">
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'low complexity with self-limited or minor problems')">minor problems</button>
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'low complexity with a stable, chronic illness')">stable chronic</button>
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'an acute, uncomplicated illness or injury')">acute, uncomplicated</button>
-                <textarea id="ComplexityText" placeholder="" onchange="updateRealTimeText('Complexity', 'ComplexityText')"></textarea>
+                <button data-section="ComplexityLow" onclick="handleButtonClick(this, 'low complexity with self-limited or minor problems')">minor problems</button>
+                <button data-section="ComplexityLow" onclick="handleButtonClick(this, 'low complexity with a stable, chronic illness')">stable chronic</button>
+                <button data-section="ComplexityLow" onclick="handleButtonClick(this, 'an acute, uncomplicated illness or injury')">acute, uncomplicated</button>
+                <textarea id="ComplexityLowText" placeholder="" onchange="updateRealTimeText('Complexity', 'ComplexityLowText')"></textarea>
             </div>
 
             <i style="font-size: 0.85em;">Moderate Complexity</i>
             <div class="input-group">
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'moderate complexity with one or more chronic illness with exacerbation/progression')">chronic, exac</button>
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'moderate complexity with two or more stable chronic illnesses')">multiple chronic</button>
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'moderate complexity with an acute illness with systemic symptoms')">acute with systemic sx</button>
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'moderate complexity with an acute, complicated injury')">complicated injury</button>
-                <textarea id="ComplexityText2" placeholder="" onchange="updateRealTimeText('Complexity', 'ComplexityText2')"></textarea>
+                <button data-section="ComplexityModerate" onclick="handleButtonClick(this, 'moderate complexity with one or more chronic illness with exacerbation/progression')">chronic, exac</button>
+                <button data-section="ComplexityModerate" onclick="handleButtonClick(this, 'moderate complexity with two or more stable chronic illnesses')">multiple chronic</button>
+                <button data-section="ComplexityModerate" onclick="handleButtonClick(this, 'moderate complexity with an acute illness with systemic symptoms')">acute with systemic sx</button>
+                <button data-section="ComplexityModerate" onclick="handleButtonClick(this, 'moderate complexity with an acute, complicated injury')">complicated injury</button>
+                <textarea id="ComplexityModerateText" placeholder="" onchange="updateRealTimeText('Complexity', 'ComplexityModerateText')"></textarea>
             </div>
 
             <i style="font-size: 0.85em;">High Complexity</i>
             <div class="input-group">
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'high complexity with a chronic illness with severe exacerbation/progression')">chronic w/ severe exac</button>
-                <button data-section="Complexity" onclick="handleButtonClick(this, 'high complexity with an acute or chronic illness or injury that poses a threat to life or bodily function')">acute/chronic with life/bodily threat</button>
-                <textarea id="ComplexityText3" placeholder="" onchange="updateRealTimeText('Complexity', 'ComplexityText3')"></textarea>
+                <button data-section="ComplexityHigh" onclick="handleButtonClick(this, 'high complexity with a chronic illness with severe exacerbation/progression')">chronic w/ severe exac</button>
+                <button data-section="ComplexityHigh" onclick="handleButtonClick(this, 'high complexity with an acute or chronic illness or injury that poses a threat to life or bodily function')">acute/chronic with life/bodily threat</button>
+                <textarea id="ComplexityHighText" placeholder="" onchange="updateRealTimeText('Complexity', 'ComplexityHighText')"></textarea>
             </div>
 
             <br>
