--- a/Intubation.html
+++ b/Intubation.html
@@ -62,7 +62,7 @@
             <textarea id="techniqueText" placeholder="" onchange="updateRealTimeText('Technique', 'techniqueText')"></textarea>
             
             <h3>Confirmation of Tube</h3>
-            <button data-section="confirmation" onclick="handleButtonClick(this, 'end-tidal waveform capnography was confirmed')" style="background-color: #1AC4D0; color: white; border: 2px solid #000080;">ETCO2 waveform</button>
+            <button data-section="confirmation" onclick="handleButtonClick(this, 'end-tidal waveform capnography was confirmed')" style="background-color: #87ceeb; color: white; border: 2px solid #000080;">ETCO2 waveform</button>
             <button data-section="confirmation" onclick="handleButtonClick(this, 'tube was directly visualized passing through the cords')">direct visualization</button>
             <button data-section="confirmation" onclick="handleButtonClick(this, 'good color change on colorimetry')">color change</button>
             <button data-section="confirmation" onclick="handleButtonClick(this, 'symmetric breath sounds were auscultated')">breath sounds</button>
