--- a/MDM.html
+++ b/MDM.html
@@ -60,7 +60,7 @@
 
             <i style="font-size: 0.85em;">Ordered/Reviewed Tests</i>
             <div class="input-group">
-                <button data-section="OrderedReviewedTests" onclick="handleButtonClick(this, 'I ordered and independently reviewed the blood work and/or imaging detailed in the patient’s chart')">See chart for details</button>
+                <button data-section="OrderedReviewedTests" onclick="handleButtonClick(this, 'I ordered and independently reviewed the laboratory testing and/or imaging detailed in the patient’s chart')">See chart for details</button>
                 <textarea id="OrderedReviewedTestsText" placeholder="" onchange="updateRealTimeText('Ordered/Reviewed Tests', 'OrderedReviewedTestsText')"></textarea>
             </div>
 
